--- a/z_carousel/src/components/Carousel.scss
+++ b/z_carousel/src/components/Carousel.scss
@@ -2,6 +2,8 @@
   min-width: 100%;
   height: 80%;
   //display: spread;
+  //overflow: hidden;
+  transition: 0.5s ease-in-out;
 }
 
 .carousel {
@@ -13,4 +15,22 @@
   display: flex;
   align-items: center;
   overflow: hidden;
+}
+
+.title {
+  position: absolute;
+  bottom: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.titleText {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 2em;
+  font-weight: 700;
+  color: yellow;
+  -webkit-text-stroke: 1px black;
+  -webkit-text-fill-color: yellow;
 }
