--- a/z_carousel/src/components/Carousel.scss
+++ b/z_carousel/src/components/Carousel.scss
@@ -13,13 +13,21 @@
   margin: 0;
   padding: 0;
   display: flex;
-  align-items: center;
+  align-items: top;
   overflow: hidden;
+}
+
+.outerDiv {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  height: 400px;
+  align-items: center;
 }
 
 .title {
   position: absolute;
-  bottom: 15px;
+  top: 15px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -35,30 +43,40 @@
   -webkit-text-fill-color: yellow;
 }
 
-.outerDiv {
-  display: flex;
-  justify-content: center;
-  height: 500px;
-  align-items: center;
-}
-
-.btn {
-  // top: 50%;
-  // transform: translateY(-50%);
-  // width: 5%;
+.buttonBox {
+  width: 50px;
   height: 80%;
-  background: lightgray;
+  background-color: none;
+}
+.btn {
+  width: 100%;
+  min-width: 100%;
+  height: 100%;
+  background: none;
   outline: none;
   border: none;
   font-size: 2em;
   .glyph {
-    color: white;
+    color: black;
     cursor: pointer;
   }
   &:hover {
     .glyph {
-      color: white;
+      color: blue;
       opacity: 100%;
     }
   }
+}
+.image-space {
+  width: 100%;
+  height: auto;
+}
+
+.no-images {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.5em;
+  font-weight: 700;
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
 }
